--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Helvetica;
+}
+
 .container {
     margin: 20px auto;
     width: 80%;
@@ -38,4 +45,28 @@
     max-height: 400px;
     border-radius: 8px;
     cursor: pointer;
+}
+
+/* Efeito na foto ampliada */
+.foto-ampliada-backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.foto-ampliada-container {
+    max-width: 62%;
+    max-height: 90%;
+}
+
+.foto-ampliada-container img {
+    max-width: 45%;
+    max-height: 90%;
+    border-radius: 8px;
 }
